--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="公告">
-<title>崽儿</title>
+<title>まだ博客</title>
 <link rel="shortcut icon" href="http://www.qqai.cc/favicon.ico">
 <meta name="keywords" content="醉心">
 <meta name="description" content="丫丫丫">
@@ -21,7 +21,7 @@
 <div id="dynamic-background" style="width: 100%; height: 100%; position: fixed;z-index: -1;">
     <script>
         window.addEventListener("load", function(e){
-            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://pic1.zhimg.com/80/v2-6709566c6bb5e9818c6d602fd8820688_1440w.webp" width="100%" height="100%" style="border: 0;"></iframe>';
+            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://pic1.zhimg.com/80/v2-6709566c6bb5e9818c6d602fd8820688_1440w.jpg" width="100%" height="100%" style="border: 0;"></iframe>';
                });
 </script>
 </div>
