--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="dynamic-background" style="width: 100%; height: 100%; position: fixed;z-index: -1;">
     <script>
         window.addEventListener("load", function(e){
-            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://juyp.hucl.link/f/b91i4/4afc7e93625a693f.jpg" width="100%" height="100%" style="border: 0;"></iframe>';
+            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://img.xjh.me/random_img.php" width="100%" height="100%" style="border: 0;"></iframe>';
                });
 </script>
 </div>
