--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #00B6FF;top: 18px;left: 143px;">👉这个页面会扩展下去👈</p></center>
 <center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #F100FF;top: 18px;left: 143px;">👇技术含量👇</p></center>
 <center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #00B6FF;top: 18px;left: 143px;">👉只会linux和一部分的html👈</p></center>
-
+<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0066;top: 18px;left: 143px;">😃雷猴啊，靓仔😃</p></center>
 
 </div>
 </div>
