--- a/index.html
+++ b/index.html
@@ -43,4 +43,7 @@
 </div>
 </div>
 
+<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0060;top: 18px;left: 143px;">飓风云QQ群:822726278</p></center>
+<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0090;top: 18px;left: 143px;">网速吧官方QQ群:296669736</p></center>
+
 </body></html>
