--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="dynamic-background" style="width: 100%; height: 100%; position: fixed;z-index: -1;">
     <script>
         window.addEventListener("load", function(e){
-            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://api.r10086.com/PPT/PPT.php?PPT=%E8%B5%9B%E9%A9%AC%E5%A8%98" width="100%" height="100%" style="border: 0;"></iframe>';
+            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://api.r10086.com/PPT/PPT3.php?PPT=%E5%8E%9F%E7%A5%9E" width="100%" height="100%" style="border: 0;"></iframe>';
                });
 </script>
 </div>
