--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="dynamic-background" style="width: 100%; height: 100%; position: fixed;z-index: -1;">
     <script>
         window.addEventListener("load", function(e){
-            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://pan.echs.top/0/i/sj/+" width="100%" height="100%" style="border: 0;"></iframe>';
+            document.getElementById("dynamic-background").innerHTML = '<iframe src="127.0.0.1" width="100%" height="100%" style="border: 0;"></iframe>';
                });
 </script>
 </div>
