--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="dynamic-background" style="width: 100%; height: 100%; position: fixed;z-index: -1;">
     <script>
         window.addEventListener("load", function(e){
-            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://api.r10086.com/PPT/PPT.php?PPT=钢之炼金术师" width="100%" height="100%" style="border: 0;"></iframe>';
+            document.getElementById("dynamic-background").innerHTML = '<iframe src="https://api.r10086.com/PPT/PPT.php?PPT=原神" width="100%" height="100%" style="border: 0;"></iframe>';
                });
 </script>
 </div>
