--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0066;top: 18px;left: 143px;">😃雷猴啊，靓仔😃</p></center>
 <center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0060;top: 18px;left: 143px;">飓风云QQ群:822726278</p></center>
 <center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0090;top: 18px;left: 143px;">网速吧官方QQ群:296669736</p></center>
+<img src="https://tool.lu/netcard/">
 
 </div>
 </div>
