--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
 <body>
 <style>
+pre{
+    color: #2196F3;
+	font-size: 18px;
+	font-family: 微软雅黑;
+	background: rgba(255, 255, 255, 0.55);
+	}
+.img-xys {
+         display: inline-block;
+         height: auto;
+         max-width: 100%;
+         }
     html,
     body {
         margin: 0;
