--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="author" content="公告">
-<title>まだ博客</title>
-<link rel="shortcut icon" href="http://www.qqai.cc/favicon.ico">
-<meta name="keywords" content="醉心">
-<meta name="description" content="丫丫丫">
-</head><body><style>
-    html,
-    body {
-        margin: 0;
+<html>
+<body>
+#dynamic-background {
         width: 100%;
         height: 100%;
-    }
-</style><div id="dynamic-background" style="width: 100%; height: 100%; position: fixed;z-index: -1;">
-    <script>
-        window.addEventListener("load", function(e){ document.getElementById("dynamic-background").innerHTML = '<iframe src="https://api.r10086.com/PPT/PPT.php?PPT=原神" width="100%" height="100%" style="border: 0;"></iframe>';
-               });</script></div></body>
-<div style="position: absolute;width: 100%;text-align:center; top:20px;">
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0000;top: 18px;left: 143px;">👇你好👇</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #F100FF;top: 18px;left: 143px;">👇关于开放👇</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #00B6FF;top: 18px;left: 143px;">👉这个页面是光明拿来的👈</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #F100FF;top: 18px;left: 143px;">👇所以？👇</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #00B6FF;top: 18px;left: 143px;">👉这个页面会扩展下去👈</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #F100FF;top: 18px;left: 143px;">👇技术含量👇</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #00B6FF;top: 18px;left: 143px;">👉只会linux和一部分的html👈</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0066;top: 18px;left: 143px;">😃雷猴啊，靓仔😃</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0060;top: 18px;left: 143px;">飓风云QQ群:822726278</p></center>
-<center><p style="text-shadow: rgb(0, 0, 0) 1px 1px 1px;font-size: 24px;color: #FF0090;top: 18px;left: 143px;">网速吧官方QQ群:296669736</p></center>
-<img src="https://tool.lu/netcard/">
-</div></div></body></html>
+        position: fixed;
+        z-index: -1;
+        filter: blur(4px);
+
+<div id="dynamic-background">
+    <!-- 背景图片或视频 -->
+    <iframe src="https://api.r10086.com/PPT/PPT.php?PPT=原神" width="100%" height="100%" style="border: 0;"></iframe>
+</div>
+</body>
+</html>
