--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<html>
-<body>
-#dynamic-background {
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        z-index: -1;
-        filter: blur(4px);
-
-<div id="dynamic-background">
-    <!-- 背景图片或视频 -->
-    <iframe src="https://api.r10086.com/PPT/PPT.php?PPT=原神" width="100%" height="100%" style="border: 0;"></iframe>
+<center><iframe width="280" scrolling="no" height="25" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=34&icon=1&num=3"></iframe></center>
+<div>
+<iframe src="https://api.r10086.com/PPT/PPT.php?PPT=原神" width="100%" height="100%" style="border: 0;"></iframe>
 </div>
-</body>
-</html>
