--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
+	<iframe src="api.imq.icu:7433" width="100%" height="100%" style="border: 0;"></iframe>
 	<div class="wrapper">
 			<div class="videocontent">
 				<video id="myVideo" class="video-js vjs-default-skin vjs-big-play-centered vjs-16-9"  controls  height="auto" preload="auto"  data-setup='{}'>    
 						  <source id="source" src="https://vip.ffzyread.com/20240212/23374_49643197/2000k/hls/mixed.m3u8"  type="application/x-mpegURL">
-<iframe src="https://api.r10086.com/PPT/PPT.php?PPT=原神" width="100%" height="100%" style="border: 0;"></iframe>
 				</video>
 			</div>
 	</div>
