--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-	<iframe src="api.imq.icu:7433" width="100%" height="100%" style="border: 0;"></iframe>
+	<iframe src="img.imq.icu/api" width="100%" height="100%" style="border: 0;"></iframe>
+</body>
+<body>
 	<div class="wrapper">
 			<div class="videocontent">
 				<video id="myVideo" class="video-js vjs-default-skin vjs-big-play-centered vjs-16-9"  controls  height="auto" preload="auto"  data-setup='{}'>    
